// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openai > openai chat > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762271642,
  "id": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai chat > span 1`] = `
[
  {
    "key": "logfire.msg",
    "value": {
      "stringValue": "chat gpt-5-2025-08-07",
    },
  },
  {
    "key": "logfire.json_schema",
    "value": {
      "stringValue": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
    },
  },
  {
    "key": "logfire.level_num",
    "value": {
      "intValue": 9,
    },
  },
  {
    "key": "gen_ai.operation.name",
    "value": {
      "stringValue": "chat",
    },
  },
  {
    "key": "gen_ai.request.model",
    "value": {
      "stringValue": "gpt-5",
    },
  },
  {
    "key": "gen_ai.system",
    "value": {
      "stringValue": "openai",
    },
  },
  {
    "key": "gen_ai.request.max_tokens",
    "value": {
      "intValue": 1024,
    },
  },
  {
    "key": "gen_ai.request.top_k",
    "value": {},
  },
  {
    "key": "gen_ai.request.top_p",
    "value": {},
  },
  {
    "key": "gen_ai.request.temperature",
    "value": {},
  },
  {
    "key": "gen_ai.request.stop_sequences",
    "value": {},
  },
  {
    "key": "gen_ai.request.seed",
    "value": {},
  },
  {
    "key": "gen_ai.response.finish_reasons",
    "value": {
      "arrayValue": {
        "values": [
          {
            "stringValue": "stop",
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.response.id",
    "value": {
      "stringValue": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
    },
  },
  {
    "key": "gen_ai.input.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "system",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "You are a helpful assistant.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "user",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "What is the capital of France?",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.output.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "assistant",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "Paris.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
                {
                  "key": "finish_reason",
                  "value": {
                    "stringValue": "stop",
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.system_instructions",
    "value": {},
  },
  {
    "key": "http.response.status_code",
    "value": {
      "intValue": 200,
    },
  },
  {
    "key": "http.request.body.text",
    "value": {
      "stringValue": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
    },
  },
  {
    "key": "http.response.body.text",
    "value": {
      "stringValue": "{"id":"chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV","object":"chat.completion","created":1762271642,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
    },
  },
  {
    "key": "gen_ai.response.model",
    "value": {
      "stringValue": "gpt-5-2025-08-07",
    },
  },
  {
    "key": "gen_ai.usage.input_tokens",
    "value": {
      "intValue": 23,
    },
  },
  {
    "key": "gen_ai.usage.cache_read_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_write_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_tokens",
    "value": {
      "intValue": 11,
    },
  },
  {
    "key": "gen_ai.usage.input_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_audio_read_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
]
`;

exports[`openai > openai chat legacy name > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762271642,
  "id": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai chat legacy name > span 1`] = `
[
  {
    "key": "logfire.msg",
    "value": {
      "stringValue": "chat gpt-5-2025-08-07",
    },
  },
  {
    "key": "logfire.json_schema",
    "value": {
      "stringValue": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
    },
  },
  {
    "key": "logfire.level_num",
    "value": {
      "intValue": 9,
    },
  },
  {
    "key": "gen_ai.operation.name",
    "value": {
      "stringValue": "chat",
    },
  },
  {
    "key": "gen_ai.request.model",
    "value": {
      "stringValue": "gpt-5",
    },
  },
  {
    "key": "gen_ai.system",
    "value": {
      "stringValue": "openai",
    },
  },
  {
    "key": "gen_ai.request.max_tokens",
    "value": {
      "intValue": 1024,
    },
  },
  {
    "key": "gen_ai.request.top_k",
    "value": {},
  },
  {
    "key": "gen_ai.request.top_p",
    "value": {},
  },
  {
    "key": "gen_ai.request.temperature",
    "value": {},
  },
  {
    "key": "gen_ai.request.stop_sequences",
    "value": {},
  },
  {
    "key": "gen_ai.request.seed",
    "value": {},
  },
  {
    "key": "gen_ai.response.finish_reasons",
    "value": {
      "arrayValue": {
        "values": [
          {
            "stringValue": "stop",
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.response.id",
    "value": {
      "stringValue": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
    },
  },
  {
    "key": "gen_ai.input.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "system",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "You are a helpful assistant.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "user",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "What is the capital of France?",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.output.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "assistant",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "Paris.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
                {
                  "key": "finish_reason",
                  "value": {
                    "stringValue": "stop",
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.system_instructions",
    "value": {},
  },
  {
    "key": "http.response.status_code",
    "value": {
      "intValue": 200,
    },
  },
  {
    "key": "http.request.body.text",
    "value": {
      "stringValue": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
    },
  },
  {
    "key": "http.response.body.text",
    "value": {
      "stringValue": "{"id":"chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV","object":"chat.completion","created":1762271642,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
    },
  },
  {
    "key": "gen_ai.response.model",
    "value": {
      "stringValue": "gpt-5-2025-08-07",
    },
  },
  {
    "key": "gen_ai.usage.input_tokens",
    "value": {
      "intValue": 23,
    },
  },
  {
    "key": "gen_ai.usage.cache_read_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_write_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_tokens",
    "value": {
      "intValue": 11,
    },
  },
  {
    "key": "gen_ai.usage.input_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_audio_read_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
]
`;

exports[`openai > openai chat stream > chunks 1`] = `
[
  {
    "choices": [
      {
        "delta": {
          "content": "",
          "refusal": null,
          "role": "assistant",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762271713,
    "id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "1oeFyzekfM",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {
          "content": "Paris",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762271713,
    "id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "iNYovHl",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {
          "content": ".",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762271713,
    "id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "z2nujSb0c5n",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {},
        "finish_reason": "stop",
        "index": 0,
      },
    ],
    "created": 1762271713,
    "id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "OvkX97",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [],
    "created": 1762271713,
    "id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "d9x8d108MYZ",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": {
      "completion_tokens": 11,
      "completion_tokens_details": {
        "accepted_prediction_tokens": 0,
        "audio_tokens": 0,
        "reasoning_tokens": 0,
        "rejected_prediction_tokens": 0,
      },
      "prompt_tokens": 23,
      "prompt_tokens_details": {
        "audio_tokens": 0,
        "cached_tokens": 0,
      },
      "total_tokens": 34,
    },
  },
]
`;

exports[`openai > openai chat stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.request.max_tokens": 1024,
      "gen_ai.request.model": "gpt-5",
      "gen_ai.response.id": "chatcmpl-CYDfFsepopZlcPzyFj5cdegEMUIO3",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.input_audio_tokens": 0,
      "gen_ai.usage.input_tokens": 23,
      "gen_ai.usage.output_audio_tokens": 0,
      "gen_ai.usage.output_tokens": 11,
      "http.request.header.accept": "application/json",
      "http.request.header.authorization": "Bearer healthy",
      "http.request.header.content-length": "319",
      "http.request.header.content-type": "application/json",
      "http.request.header.user-agent": "OpenAI/JS 4.104.0",
      "http.request.header.x-stainless-arch": "unknown",
      "http.request.header.x-stainless-lang": "js",
      "http.request.header.x-stainless-os": "Unknown",
      "http.request.header.x-stainless-package-version": "4.104.0",
      "http.request.header.x-stainless-retry-count": "0",
      "http.request.header.x-stainless-runtime": "unknown",
      "http.request.header.x-stainless-runtime-version": "unknown",
      "http.request.header.x-stainless-timeout": "600",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream; charset=utf-8",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.response.model":{"type":"string"},"gen_ai.response.id":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.output_audio_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-stainless-arch":{"type":"string"},"http.request.header.x-stainless-lang":{"type":"string"},"http.request.header.x-stainless-os":{"type":"string"},"http.request.header.x-stainless-package-version":{"type":"string"},"http.request.header.x-stainless-retry-count":{"type":"string"},"http.request.header.x-stainless-runtime":{"type":"string"},"http.request.header.x-stainless-runtime-version":{"type":"string"},"http.request.header.x-stainless-timeout":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5",
      "url.full": "https://example.com/chat/chat/completions",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses > llm 1`] = `
{
  "background": false,
  "billing": {
    "payer": "developer",
  },
  "created_at": 1762271645,
  "error": null,
  "id": "resp_0460eb44ce4bf29800690a219dd0108193abee8e830ce725cb",
  "incomplete_details": null,
  "instructions": "reply concisely",
  "max_output_tokens": null,
  "max_tool_calls": null,
  "metadata": {},
  "model": "gpt-5-2025-08-07",
  "object": "response",
  "output": [
    {
      "id": "rs_0460eb44ce4bf29800690a219ea7b08193be21548d7c847f56",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Usually blue on a clear day (due to Rayleigh scattering), but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
          "type": "output_text",
        },
      ],
      "id": "msg_0460eb44ce4bf29800690a21a2388c8193b3f20e6d76de9744",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
  ],
  "output_text": "Usually blue on a clear day (due to Rayleigh scattering), but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
  "parallel_tool_calls": true,
  "previous_response_id": null,
  "prompt_cache_key": null,
  "prompt_cache_retention": null,
  "reasoning": {
    "effort": "medium",
    "summary": null,
  },
  "safety_identifier": null,
  "service_tier": "default",
  "status": "completed",
  "store": true,
  "temperature": 1,
  "text": {
    "format": {
      "type": "text",
    },
    "verbosity": "medium",
  },
  "tool_choice": "auto",
  "tools": [],
  "top_logprobs": 0,
  "top_p": 1,
  "truncation": "disabled",
  "usage": {
    "input_tokens": 20,
    "input_tokens_details": {
      "cached_tokens": 0,
    },
    "output_tokens": 168,
    "output_tokens_details": {
      "reasoning_tokens": 128,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.0017050000000000001,
    },
    "total_tokens": 188,
  },
  "user": null,
}
`;

exports[`openai > openai responses > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what color is the sky?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "content": "Usually blue on a clear day (due to Rayleigh scattering), but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": {},
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": {},
      "gen_ai.response.id": "resp_0460eb44ce4bf29800690a219dd0108193abee8e830ce725cb",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": {},
      "gen_ai.usage.input_tokens": 20,
      "gen_ai.usage.output_audio_tokens": {},
      "gen_ai.usage.output_tokens": 168,
      "http.request.body.text": "{
  "model": "gpt-5",
  "instructions": "reply concisely",
  "input": "what color is the sky?"
}",
      "http.response.body.text": "{"id":"resp_0460eb44ce4bf29800690a219dd0108193abee8e830ce725cb","object":"response","created_at":1762271645,"status":"completed","background":false,"billing":{"payer":"developer"},"error":null,"incomplete_details":null,"instructions":"reply concisely","max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-2025-08-07","output":[{"id":"rs_0460eb44ce4bf29800690a219ea7b08193be21548d7c847f56","type":"reasoning","summary":[]},{"id":"msg_0460eb44ce4bf29800690a21a2388c8193b3f20e6d76de9744","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"Usually blue on a clear day (due to Rayleigh scattering), but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night."}],"role":"assistant"}],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":1,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1,"truncation":"disabled","usage":{"input_tokens":20,"input_tokens_details":{"cached_tokens":0},"output_tokens":168,"output_tokens_details":{"reasoning_tokens":128},"total_tokens":188,"pydantic_ai_gateway":{"cost_estimate":0.0017050000000000001}},"user":null,"metadata":{}}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses legacy name > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762271642,
  "id": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai responses legacy name > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "You are a helpful assistant.",
              "type": "text",
            },
          ],
          "role": "system",
        },
        {
          "parts": [
            {
              "content": "What is the capital of France?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "finish_reason": "stop",
          "parts": [
            {
              "content": "Paris.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": 1024,
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": [
        "stop",
      ],
      "gen_ai.response.id": "chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": 0,
      "gen_ai.usage.input_tokens": 23,
      "gen_ai.usage.output_audio_tokens": 0,
      "gen_ai.usage.output_tokens": 11,
      "http.request.body.text": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
      "http.response.body.text": "{"id":"chatcmpl-CYDe6BCWOKGGGTlQLofyQ2DP3QTRV","object":"chat.completion","created":1762271642,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses stream > chunks 1`] = `
[
  {
    "response": {
      "background": false,
      "created_at": 1762530675,
      "error": null,
      "id": "resp_009cd1fb5c5745df00690e157272e481a0a62b0981be1ad5ab",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "auto",
      "status": "in_progress",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
      "user": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "created_at": 1762530675,
      "error": null,
      "id": "resp_009cd1fb5c5745df00690e157272e481a0a62b0981be1ad5ab",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "auto",
      "status": "in_progress",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
      "user": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_009cd1fb5c5745df00690e157396e481a0957dce72e75edafe",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "item": {
      "id": "rs_009cd1fb5c5745df00690e157396e481a0957dce72e75edafe",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 3,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 4,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 5,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Usually",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "Y6c55fcnK",
    "output_index": 1,
    "sequence_number": 6,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " blue",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "ykCZBFhn4Q9",
    "output_index": 1,
    "sequence_number": 7,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " in",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "erWu25aiquUJt",
    "output_index": 1,
    "sequence_number": 8,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " daytime",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "KPXE8YsB",
    "output_index": 1,
    "sequence_number": 9,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " (",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "Y79kF92FBN8Hmf",
    "output_index": 1,
    "sequence_number": 10,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "Ray",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "cIK8M0lEE3YzA",
    "output_index": 1,
    "sequence_number": 11,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "leigh",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "bK7CdxeuL5K",
    "output_index": 1,
    "sequence_number": 12,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " scattering",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "WRRbL",
    "output_index": 1,
    "sequence_number": 13,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ");",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "wEdg1aNquL3aA9",
    "output_index": 1,
    "sequence_number": 14,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " red",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "dziPmC2LXs2R",
    "output_index": 1,
    "sequence_number": 15,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "/or",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "pqS1KJ3JYY2oF",
    "output_index": 1,
    "sequence_number": 16,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "ange",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "gmh146U3SCPc",
    "output_index": 1,
    "sequence_number": 17,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " at",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "ZWWPG3FWtva0m",
    "output_index": 1,
    "sequence_number": 18,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " sunrise",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "KcrJwlOt",
    "output_index": 1,
    "sequence_number": 19,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "/s",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "m6rPAfY9B2wJnX",
    "output_index": 1,
    "sequence_number": 20,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "unset",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "Xb1emQk0HKL",
    "output_index": 1,
    "sequence_number": 21,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "etzj24pXnvAtH5B",
    "output_index": 1,
    "sequence_number": 22,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " gray",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "GUfbCr5GZBe",
    "output_index": 1,
    "sequence_number": 23,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " when",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "3elxfTQFFSi",
    "output_index": 1,
    "sequence_number": 24,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " cloudy",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "g0DIqO7OE",
    "output_index": 1,
    "sequence_number": 25,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "iSZ4Qw4HijUw5Cu",
    "output_index": 1,
    "sequence_number": 26,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " and",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "b5BTeUABEUTA",
    "output_index": 1,
    "sequence_number": 27,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " black",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "VYq8RxDxTn",
    "output_index": 1,
    "sequence_number": 28,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " at",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "DtYX229RaB5AP",
    "output_index": 1,
    "sequence_number": 29,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " night",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "BbvTGufK42",
    "output_index": 1,
    "sequence_number": 30,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "obfuscation": "G3VAJl2mI9rIYpe",
    "output_index": 1,
    "sequence_number": 31,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 32,
    "text": "Usually blue in daytime (Rayleigh scattering); red/orange at sunrise/sunset, gray when cloudy, and black at night.",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Usually blue in daytime (Rayleigh scattering); red/orange at sunrise/sunset, gray when cloudy, and black at night.",
      "type": "output_text",
    },
    "sequence_number": 33,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Usually blue in daytime (Rayleigh scattering); red/orange at sunrise/sunset, gray when cloudy, and black at night.",
          "type": "output_text",
        },
      ],
      "id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 34,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "created_at": 1762530675,
      "error": null,
      "id": "resp_009cd1fb5c5745df00690e157272e481a0a62b0981be1ad5ab",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [
        {
          "id": "rs_009cd1fb5c5745df00690e157396e481a0957dce72e75edafe",
          "summary": [],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Usually blue in daytime (Rayleigh scattering); red/orange at sunrise/sunset, gray when cloudy, and black at night.",
              "type": "output_text",
            },
          ],
          "id": "msg_009cd1fb5c5745df00690e157619cc81a0910861959c277461",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 20,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 160,
        "output_tokens_details": {
          "reasoning_tokens": 128,
        },
        "total_tokens": 180,
      },
      "user": null,
    },
    "sequence_number": 35,
    "type": "response.completed",
  },
]
`;

exports[`openai > openai responses stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what color is the sky?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.request.model": "gpt-5",
      "gen_ai.response.id": "resp_009cd1fb5c5745df00690e157272e481a0a62b0981be1ad5ab",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.input_tokens": 20,
      "gen_ai.usage.output_tokens": 160,
      "http.request.header.accept": "application/json",
      "http.request.header.authorization": "Bearer healthy",
      "http.request.header.content-length": "114",
      "http.request.header.content-type": "application/json",
      "http.request.header.user-agent": "OpenAI/JS 4.104.0",
      "http.request.header.x-stainless-arch": "unknown",
      "http.request.header.x-stainless-lang": "js",
      "http.request.header.x-stainless-os": "Unknown",
      "http.request.header.x-stainless-package-version": "4.104.0",
      "http.request.header.x-stainless-retry-count": "0",
      "http.request.header.x-stainless-runtime": "unknown",
      "http.request.header.x-stainless-runtime-version": "unknown",
      "http.request.header.x-stainless-timeout": "600",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream; charset=utf-8",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.response.model":{"type":"string"},"gen_ai.response.id":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-stainless-arch":{"type":"string"},"http.request.header.x-stainless-lang":{"type":"string"},"http.request.header.x-stainless-os":{"type":"string"},"http.request.header.x-stainless-package-version":{"type":"string"},"http.request.header.x-stainless-retry-count":{"type":"string"},"http.request.header.x-stainless-runtime":{"type":"string"},"http.request.header.x-stainless-runtime-version":{"type":"string"},"http.request.header.x-stainless-timeout":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5",
      "url.full": "https://example.com/responses/responses",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses with builtin tools > llm 1`] = `
{
  "background": false,
  "billing": {
    "payer": "developer",
  },
  "created_at": 1762271730,
  "error": null,
  "id": "resp_0dc4a3c582e21a7f00690a21f2f5a881a38c2bc17284ab0bdb",
  "incomplete_details": null,
  "instructions": "be precise",
  "max_output_tokens": null,
  "max_tool_calls": null,
  "metadata": {},
  "model": "gpt-5-2025-08-07",
  "object": "response",
  "output": [
    {
      "id": "rs_0dc4a3c582e21a7f00690a21f5c01c81a387696a1225044c74",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "import decimal, math, fractions, sys, statistics, random",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a21f79eb081a385bc9ea91607bb8e",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "code": "n = 123_902_139_123
# Check if perfect square
is_square = int(n**0.5)**2 == n
sqrt_n = n**0.5
int_part = int(sqrt_n)
is_square, int_part",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a21fb50d081a3839fffe407f88965",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_0dc4a3c582e21a7f00690a21fdb20081a38c8d71579c417602",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "int_part, int_part**2, (int_part+1)**2",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a21fe485c81a3bc4ba9ccc7418d6e",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_0dc4a3c582e21a7f00690a220009f081a3ae01ee9362963591",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "from decimal import Decimal, getcontext
getcontext().prec = 50
sqrt_val = Decimal(n).sqrt()
sqrt_val",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a2200de5881a3b0fb27e1e2317788",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_0dc4a3c582e21a7f00690a22031aa881a38cd6660b4d830c50",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "float_val = float(sqrt_val)
float_val",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a2209f9cc81a39c0e1ddfa029c7a6",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_0dc4a3c582e21a7f00690a220baf1481a3bda6abb8b9c09f88",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "from decimal import ROUND_HALF_UP
def round_str(dec, places):
    q = Decimal(10) ** -places
    return str(dec.quantize(q, rounding=ROUND_HALF_UP))
for p in [6, 9, 12, 15]:
    print(p, round_str(sqrt_val, p))",
      "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
      "id": "ci_0dc4a3c582e21a7f00690a220c125481a3ad139dde1b01ef42",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_0dc4a3c582e21a7f00690a220ee65081a3b4a3c606ed32f88c",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "The square root of 123,902,139,123 is approximately 351,997.356698882044. It’s not a perfect square.",
          "type": "output_text",
        },
      ],
      "id": "msg_0dc4a3c582e21a7f00690a221614e081a3b9e5621bd0f3ba23",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
  ],
  "output_text": "The square root of 123,902,139,123 is approximately 351,997.356698882044. It’s not a perfect square.",
  "parallel_tool_calls": true,
  "previous_response_id": null,
  "prompt_cache_key": null,
  "prompt_cache_retention": null,
  "reasoning": {
    "effort": "medium",
    "summary": null,
  },
  "safety_identifier": null,
  "service_tier": "default",
  "status": "completed",
  "store": true,
  "temperature": 1,
  "text": {
    "format": {
      "type": "text",
    },
    "verbosity": "medium",
  },
  "tool_choice": "auto",
  "tools": [
    {
      "container": {
        "type": "auto",
      },
      "type": "code_interpreter",
    },
  ],
  "top_logprobs": 0,
  "top_p": 1,
  "truncation": "disabled",
  "usage": {
    "input_tokens": 1808,
    "input_tokens_details": {
      "cached_tokens": 0,
    },
    "output_tokens": 1061,
    "output_tokens_details": {
      "reasoning_tokens": 1024,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.01287,
    },
    "total_tokens": 2869,
  },
  "user": null,
}
`;

exports[`openai > openai responses with builtin tools > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what's the root square of 123902139123?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "import decimal, math, fractions, sys, statistics, random",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a21f79eb081a385bc9ea91607bb8e",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "n = 123_902_139_123
# Check if perfect square
is_square = int(n**0.5)**2 == n
sqrt_n = n**0.5
int_part = int(sqrt_n)
is_square, int_part",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a21fb50d081a3839fffe407f88965",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "int_part, int_part**2, (int_part+1)**2",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a21fe485c81a3bc4ba9ccc7418d6e",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "from decimal import Decimal, getcontext
getcontext().prec = 50
sqrt_val = Decimal(n).sqrt()
sqrt_val",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a2200de5881a3b0fb27e1e2317788",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "float_val = float(sqrt_val)
float_val",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a2209f9cc81a39c0e1ddfa029c7a6",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "from decimal import ROUND_HALF_UP
def round_str(dec, places):
    q = Decimal(10) ** -places
    return str(dec.quantize(q, rounding=ROUND_HALF_UP))
for p in [6, 9, 12, 15]:
    print(p, round_str(sqrt_val, p))",
                "container_id": "cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18",
                "id": "ci_0dc4a3c582e21a7f00690a220c125481a3ad139dde1b01ef42",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "content": "The square root of 123,902,139,123 is approximately 351,997.356698882044. It’s not a perfect square.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": {},
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": {},
      "gen_ai.response.id": "resp_0dc4a3c582e21a7f00690a21f2f5a881a38c2bc17284ab0bdb",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": {},
      "gen_ai.usage.input_tokens": 1808,
      "gen_ai.usage.output_audio_tokens": {},
      "gen_ai.usage.output_tokens": 1061,
      "http.request.body.text": "{
  "model": "gpt-5",
  "instructions": "be precise",
  "input": "what's the root square of 123902139123?",
  "tools": [
    {
      "type": "code_interpreter",
      "container": {
        "type": "auto"
      }
    }
  ]
}",
      "http.response.body.text": "{"id":"resp_0dc4a3c582e21a7f00690a21f2f5a881a38c2bc17284ab0bdb","object":"response","created_at":1762271730,"status":"completed","background":false,"billing":{"payer":"developer"},"error":null,"incomplete_details":null,"instructions":"be precise","max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-2025-08-07","output":[{"id":"rs_0dc4a3c582e21a7f00690a21f5c01c81a387696a1225044c74","type":"reasoning","summary":[]},{"id":"ci_0dc4a3c582e21a7f00690a21f79eb081a385bc9ea91607bb8e","type":"code_interpreter_call","status":"completed","code":"import decimal, math, fractions, sys, statistics, random","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"ci_0dc4a3c582e21a7f00690a21fb50d081a3839fffe407f88965","type":"code_interpreter_call","status":"completed","code":"n = 123_902_139_123\\n# Check if perfect square\\nis_square = int(n**0.5)**2 == n\\nsqrt_n = n**0.5\\nint_part = int(sqrt_n)\\nis_square, int_part","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"rs_0dc4a3c582e21a7f00690a21fdb20081a38c8d71579c417602","type":"reasoning","summary":[]},{"id":"ci_0dc4a3c582e21a7f00690a21fe485c81a3bc4ba9ccc7418d6e","type":"code_interpreter_call","status":"completed","code":"int_part, int_part**2, (int_part+1)**2","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"rs_0dc4a3c582e21a7f00690a220009f081a3ae01ee9362963591","type":"reasoning","summary":[]},{"id":"ci_0dc4a3c582e21a7f00690a2200de5881a3b0fb27e1e2317788","type":"code_interpreter_call","status":"completed","code":"from decimal import Decimal, getcontext\\ngetcontext().prec = 50\\nsqrt_val = Decimal(n).sqrt()\\nsqrt_val","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"rs_0dc4a3c582e21a7f00690a22031aa881a38cd6660b4d830c50","type":"reasoning","summary":[]},{"id":"ci_0dc4a3c582e21a7f00690a2209f9cc81a39c0e1ddfa029c7a6","type":"code_interpreter_call","status":"completed","code":"float_val = float(sqrt_val)\\nfloat_val","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"rs_0dc4a3c582e21a7f00690a220baf1481a3bda6abb8b9c09f88","type":"reasoning","summary":[]},{"id":"ci_0dc4a3c582e21a7f00690a220c125481a3ad139dde1b01ef42","type":"code_interpreter_call","status":"completed","code":"from decimal import ROUND_HALF_UP\\ndef round_str(dec, places):\\n    q = Decimal(10) ** -places\\n    return str(dec.quantize(q, rounding=ROUND_HALF_UP))\\nfor p in [6, 9, 12, 15]:\\n    print(p, round_str(sqrt_val, p))","container_id":"cntr_690a21f4fa088191a854e0303fd8e69406563a23f7fe0f18","outputs":null},{"id":"rs_0dc4a3c582e21a7f00690a220ee65081a3b4a3c606ed32f88c","type":"reasoning","summary":[]},{"id":"msg_0dc4a3c582e21a7f00690a221614e081a3b9e5621bd0f3ba23","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"The square root of 123,902,139,123 is approximately 351,997.356698882044. It’s not a perfect square."}],"role":"assistant"}],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":1,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[{"type":"code_interpreter","container":{"type":"auto"}}],"top_logprobs":0,"top_p":1,"truncation":"disabled","usage":{"input_tokens":1808,"input_tokens_details":{"cached_tokens":0},"output_tokens":1061,"output_tokens_details":{"reasoning_tokens":1024},"total_tokens":2869,"pydantic_ai_gateway":{"cost_estimate":0.01287}},"user":null,"metadata":{}}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;
